# https-self-signed-client

./: .env.example  .gitignore  192_168_0_113_cert.pem  LICENSE  README.md  advanced_client.py  api_test.py  cert_utility.py  complete_example.py  config_credentials.py  deployment_check.py  dev_helper.py  examples.py  iot_client.py  local_site_access.py  local_site_client.py  main.py  project_summary.py  pyproject.toml  security_update_summary.py  self_signed_client.py  setup_github.sh
