[project]
name = "https-self-signed-client"
version = "1.0.0"
description = "Python HTTPS client for self-signed certificates with IoT device support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0"
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["https", "ssl", "tls", "self-signed", "certificates", "iot", "httpx"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/mrpuurple/https-self-signed-client"
Repository = "https://github.com/mrpuurple/https-self-signed-client"
Issues = "https://github.com/mrpuurple/https-self-signed-client/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
]
